sandbox/output
QualityAndSellInCalculator.java:7: error: constructor QualityAndSellInCalculator in enum QualityAndSellInCalculator cannot be applied to given types;
    Sulfuras("Sulfuras, Hand of Ragnaros") {
            ^
  required: no arguments
  found: String
  reason: actual and formal argument lists differ in length
1 error
Error: Could not find or load main class TexttestFixture
